--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
+  "scripts": {
+    "test": "jest --coverage"
+  },
   "dependencies": {
     "axios": "^0.27.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
+    "@jest/types": "^28.1.3",
+    "@types/jest": "^28.1.6",
     "husky": "^8.0.1",
-    "prettier": "^2.6.2"
+    "jest": "^28.1.3",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   },
   "husky": {
     "hooks": {
