--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest",
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
