--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "version": "0.0.1",
   "scripts": {
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "doc":"node docbuild.js"
   },
+  "type": "module",
   "dependencies": {
     "axios": "^0.27.2"
   },
@@ -18,6 +20,7 @@
     "jest": "^28.1.3",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.7",
+    "ts-morph": "^19.0.0",
     "typescript": "^4.7.4"
   },
   "husky": {
